<resources>
    <string name="app_name">Interest Voyage</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="find_trains">Find Trains</string>
    <string name="starting_station">Starting Station</string>
    <string name="destination_station">Destination Station</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="looking_for_trains">Looking for trains...</string>
    <string name="enter_station_name">Enter station name</string>
    <string name="back">Back</string>
</resources>
